# Graduation-project-group3-

./: .env-database  Makefile  docker-compose.yaml  fake1  fakeee
Backend_api/: Dockerfile  pyproject.toml
Backend_api/app/: app_factory.py  settings.py
Backend_api/app/applications/Restaurants/: models_restaurants.py
Backend_api/app/applications/users/: router.py  shemas.py
backend_api/: Dockerfile  README.md  pyproject.toml
backend_api/app/: app_factory.py  settings.py
backend_api/app/applications/Restaurants/: crud.py  models_restaurants.py  router.py  schemas.py
backend_api/app/applications/auth/: auth_handler.py  password_handler.py
backend_api/app/applications/feedback/: models_feedback.py  router.py  schemas.py
backend_api/app/applications/feedbacks/: models.py  router.py  schemas.py
backend_api/app/applications/users/: crud.py  models.py  router.py
backend_api/app/migrations/: env.py
backend_api/app/migrations/versions/: 2025_05_12_1702-07fe71f28bf5_add_restaurants_table.py  2025_05_13_0906-b0f17fff41e7_initial_migration.py  2025_05_17_1113-a659dd3d22b5_add_two_tables.py  2025_06_16_1117-0ecafb6d6f1f_upgrade_user_tables.py  2025_06_21_1002-653c34d4b8f2_add_tables.py  (+8 more)
backend_api/app/services/s3/: s3.py
documentation/: mkdocs.yml
documentation/docs/: index.md  tasks.md  techno.md
frontend/: pyproject.toml
frontend/app/: app_factory.py
frontend/app/backend_api/: api.py
frontend/app/routers/: main_page_router.py
frontend/app/templates/: index.html  register.html  restaurant_detail.html
notification_service/app/: settings.py
(+6 files in other folders)
